--- a/project/index.html
+++ b/project/index.html
@@ -52,6 +52,6 @@
         </div>
       </div>
     </main>
-    <script src="./app.js"></script>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
